# osgaudio

./: AUTHORS  Authors.md  CMakeLists.txt  CompatibilityMatrix.md  Installation.md  PortingNotes.md  ProjectHome.md  README  ReleaseRoadmap.md  WikiContents.md  osgAudioBuildTreeSettings.cmake.in  osgAudioConfigVersion.cmake.in
CMakeModules/: FindFMOD.cmake  FindOpenAL.cmake  FindVorbisFile.cmake  ModuleInstall.cmake
branches/2_00-branch/: diff_ignore
branches/2_00-branch/scripts/: runexamples.bat
branches/pc/: CMakeLists.txt
branches/pc/CMakeModules/: FindFMOD.cmake
branches/pc/doc/: index.html
branches/pc/examples/: CMakeLists.txt
branches/pc/examples/openalpp/: multiple_oggstreams.cpp  simple.cpp  testfstream.cpp
branches/pc/examples/osgaudio/: osgaudio.cpp
branches/pc/examples/osgaudio-lowlevel/: README  capture.cpp  multiple.cpp  playOgg.cpp  testmic.cpp  testsend.cpp  teststream.cpp
branches/pc/examples/osgaudioviewer/: CMakeLists.txt
data/: credits.txt  osgaudio_scene.osg
doc/: CMakeLists.txt  doxyfile.cmake  doxygen.cfg
examples/openalpp/: capture.cpp  moving.cpp  multiple.cpp  multiple_oggstreams.cpp  playOgg.cpp  simple.cpp  testfstream.cpp  testsend.cpp  teststream.cpp
examples/osgaudio/: CMakeLists.txt  osgaudio.cpp
examples/osgaudio-lowlevel/: CMakeLists.txt  capture.cpp  moving.cpp  multiple.cpp  multiple_oggstreams.cpp  playOgg.cpp  simple.cpp  testfstream.cpp  testmic.cpp  testsend.cpp
examples/osgaudiomultiple/: CMakeLists.txt  osgaudiomultiple.cpp
examples/osgaudioocclude/: CMakeLists.txt  osgaudioocclude.cpp
examples/osgaudioviewer/: CMakeLists.txt  osgaudioviewer.cpp
extra/: FindosgAudio.cmake
include/openalpp/: AudioBase.h  AudioConvert.h  AudioEnvironment.h  Capture.h  DeviceUpdater.h  Error.h  Export.h  FileStream.h  FileStreamUpdater.h  GroupSource.h  InputDevice.h  Listener.h  NetStream.h  NetUpdater.h  PositionedObject.h  Sample.h  SoundData.h  Source.h  SourceBase.h  Stream.h  StreamUpdater.h  config.h  windowsstuff.h
include/osgAudio/: AudioEnvironment.h  Config.h  Config.h.in  Error.h  Export.h  FileStream.h  Listener.h  Math.h  OccludeCallback.h  Sample.h  SoundDefaults.h  SoundManager.h  SoundNode.h  SoundRoot.h  SoundState.h  SoundUpdateCB.h  Source.h  SourceBase.h  Stream.h  Version.h  Version.h.in
include/osgAudio/BackendFMOD/: AudioEnvironmentFMOD.h  FileStreamFMOD.h  ListenerFMOD.h  SampleFMOD.h  SoundFMOD.h  SourceFMOD.h  StreamFMOD.h
include/osgAudio/BackendOpenALpp/: AudioEnvironmentOpenALpp.h  FileStreamOpenALpp.h  ListenerOpenALpp.h  SampleOpenALpp.h  SourceOpenALpp.h  StreamOpenALpp.h
packaging/pkgconfig/: openalpp.pc.in  openalppopenal.pc.in  osgaudio-osgaudio.pc.in  osgaudio-osgdb_osgaudio.pc.in  osgaudio.pc.in
src/openalpp/: AudioBase.cpp  AudioConvert.cpp  AudioEnvironment.cpp  CMakeLists.txt  Capture.cpp  DeviceUpdater.cpp  Error.cpp  FileStream.cpp  FileStreamUpdater.cpp  GroupSource.cpp  InputDevice.cpp  Listener.cpp  NetStream.cpp  NetUpdater.cpp  NoFileStream.cpp  NoInputDevice.cpp  NoStreaming.cpp  Openalpp.cpp  Sample.cpp  SoundData.cpp  Source.cpp  SourceBase.cpp  Stream.cpp  StreamUpdater.cpp
src/osgAudio/: CMakeLists.txt  Error.cpp  FileStream.cpp  Listener.cpp  OccludeCallback.cpp  Sample.cpp  SoundDefaults.cpp  SoundManager.cpp  SoundNode.cpp  SoundRoot.cpp  SoundState.cpp  SoundUpdateCB.cpp  Source.cpp  Stream.cpp  Version.cpp
src/osgAudio/BackendFMOD/: AudioEnvironmentFMOD.cpp  FileStreamFMOD.cpp  ListenerFMOD.cpp  SampleFMOD.cpp  SourceFMOD.cpp  StreamFMOD.cpp
src/osgAudio/BackendOpenALpp/: AudioEnvironmentOpenALpp.cpp  FileStreamOpenALpp.cpp  ListenerOpenALpp.cpp  SampleOpenALpp.cpp  SourceOpenALpp.cpp  StreamOpenALpp.cpp
src/osgPlugin/: IO_OccludeCallback.cpp  IO_SoundNode.cpp  IO_SoundRoot.cpp  IO_SoundState.cpp  IO_SoundUpdateCB.cpp
tags/osgAudio_02_00_00/: INSTALL
tags/osgAudio_02_00_00/CMakeModules/: FindALUT.cmake  FindVorbis.cmake
tags/osgAudio_2_0_rc1/: CMakeLists.txt  NEWS  README
tags/osgAudio_2_0_rc1/data/: house.ac  osgaudioocclude_scene.osg
tags/osgAudio_2_0_rc1/examples/openalpp/: CMakeLists.txt
tags/osgAudio_2_0_rc1/scripts/: runme.bat  test_ogg.bat
trunk/: AUTHORS  CMakeLists.txt  UseosgAudio.cmake.in  osgAudioConfig.cmake.in
trunk/CMakeModules/: FindFMOD.cmake  FindOGG.cmake  FindVorbisFile.cmake
trunk/examples/openalpp/: capture.cpp  moving.cpp  multiple.cpp  multiple_oggstreams.cpp  playOgg.cpp  simple.cpp  testfstream.cpp
trunk/examples/osgaudio/: osgaudio.cpp
trunk/examples/osgaudio-lowlevel/: CMakeLists.txt  capture.cpp  moving.cpp  multiple_oggstreams.cpp  simple.cpp  testfstream.cpp
trunk/examples/osgaudiomultiple/: CMakeLists.txt  osgaudiomultiple.cpp
trunk/examples/osgaudioocclude/: CMakeLists.txt  osgaudioocclude.cpp
trunk/examples/osgaudioviewer/: CMakeLists.txt  osgaudioviewer.cpp
trunk/extra/: FindosgAudio.cmake
trunk/include/openalpp/: AudioBase.h  AudioConvert.h  AudioEnvironment.h  Capture.h  Export.h  FileStream.h  FileStreamUpdater.h  GroupSource.h  Listener.h  NetStream.h  NetUpdater.h  PositionedObject.h  Sample.h  SoundData.h  Source.h  Stream.h  config.h
trunk/include/osgAudio/: AudioEnvironment.h  Error.h  Export.h  FileStream.h  Listener.h  Math.h  OccludeCallback.h  Sample.h  SoundDefaults.h  SoundManager.h  SoundNode.h  SoundRoot.h  SoundState.h  SoundUpdateCB.h  SourceBase.h  Stream.h  Version.h
trunk/src/: CMakeLists.txt
trunk/src/openalpp/: AudioBase.cpp  AudioEnvironment.cpp  Capture.cpp  DeviceUpdater.cpp  FileStream.cpp  FileStreamUpdater.cpp  GroupSource.cpp  InputDevice.cpp  NetStream.cpp  NetUpdater.cpp  NoStreaming.cpp  Openalpp.cpp  Sample.cpp  SoundData.cpp  Source.cpp  SourceBase.cpp  Stream.cpp  StreamUpdater.cpp
trunk/src/osgAudio/: AudioEnvironment.cpp  CMakeLists.txt  Error.cpp  FileStream.cpp  Listener.cpp  OccludeCallback.cpp  SoundDefaults.cpp  SoundManager.cpp  SoundNode.cpp  SoundRoot.cpp  SoundState.cpp  Source.cpp  (+3 more)
wiki/: Authors.wiki  CompatibilityMatrix.wiki  Installation.wiki  PortingNotes.wiki  ProjectSidebar.wiki  ReleaseRoadmap.wiki  WikiContents.wiki
(+161 files in other folders)
